# GemeloDigital

./: .dockerignore  .env.example  .gitignore  Documentacion_MVP.md  docker-compose.yml  requirements.txt  run_backend.sh
agents/: graph.py  profiling_agent.py  state.py
agents/data/: competencies.json
agents/nodes/: explanatory_node.py  gap_analyzer_node.py  ml_prediction_node.py  planning_node.py  profiling_node.py  validation_node.py
agents/prompts/: communication_skill.md  evaluacion_skill.md  explanatory_prompt.txt  gap_analysis_skill.md  instruccional_skill.md  planning_prompt.md  profiling_prompt.md  validation_skill.md
agents/rag/: indexer.py  retriever.py
agents/schemas/: gap_schema.py  planning_schema.py  profiling_schema.py  validation_schema.py
agents/tools/: get_competencies.py  persistence.py  (+1 more)
backend/: Dockerfile  requirements.txt
backend/voice_agent/: Dockerfile  livekit_agent.py  pyproject.toml
data_reales/: agile-methodologies.pptx  ci-cd.pptx  cloud-infrastructure.pptx  communication.pptx  containerization.pptx  data-analysis.pptx  data-engineering.pptx  data-strategy.pptx  data-visualization.pptx  git.pptx  java.pptx  javascript.pptx  leadership.pptx  machine-learning.pptx  nosql.pptx  problem-solving.pptx  product-management.pptx  programming-fundamentals.pptx  python.pptx  sql.pptx  statistics.pptx  system-design.pptx  testing.pptx  ux-design.pptx  web-development.pptx
docs/: agents_orchestration.md  openapi.yaml  rag_architecture.md
frontend/: package.json
ml/: predict.py  reindex_service.py  train.py
scripts/: setup_db.py
(+39 files in other folders)
